# libelektra

src/bindings/: CMakeLists.txt
src/bindings/cpp/include/: key.hpp  keyset.hpp
src/bindings/swig/: kdb.i
src/bindings/swig/lua/: CMakeLists.txt  kdb.i
src/bindings/swig/lua/tests/: test_key.lua
src/bindings/swig/python/: CMakeLists.txt  kdb.i
src/bindings/swig/python/tests/: test_key.py
